--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Created Variables to replace reused styles */
 :root{
     --white-1: #ffffff;
     --white-2: #d9dcd6; 
@@ -43,7 +44,8 @@ nav {
     font-family: var(--font-2);
     font-size: 20px;
 }
-
+/* Took out UL line that was being overidden by LI elements.
+added 3 LI elements together that were all styling the same way.  */
 .header li {
     display: inline-block;
     margin-left: 25px;
@@ -93,17 +95,20 @@ p {
     font-family: var(--font-2);
     background-color: var(--blue)
 }
-
+/* .benefit-lead, .benefit brand, and .benefit cost were able to be consolidated
+ to .benefits section to remove redundancy*/
 .benefits section {
     margin-bottom: 32px;
     color: var(--white-1)
 }
-
+/* .benefit-lead h3, .benefit brand h3, and .benefit cost h3 were able to be consolidated
+ to .benefits h3 to remove redundancy*/
 .benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* .benefit-lead img, .benefit brand img, and .benefit cost img were able to be consolidated
+ to .benefits img to remove redundancy*/
 .benefits img {
     display: block;
     margin: 10px auto;
